--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome_back_to_Nullclass">Welcome back to NullClass. Login to get started.</string>
     <string name="don_t_have_an_account_sign_up">Dont have an account? Sign Up</string>
-    <string name="Create_your_account">Create your account and get started with IoT ClubHouse</string>
+    <string name="Create_your_account">Create your account and get started with NullClass</string>
 </resources>
